fix overlapping header text

--- a/css/agency.css
+++ b/css/agency.css
@@ -202,6 +202,7 @@ fieldset[disabled] .btn-xl.active {
   font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-transform: uppercase;
   font-weight: 400;
+  font-size: 12px;
   letter-spacing: 1px;
   color: #fff
 }
